@@ -7,7 +7,21 @@ class RBMBer(RBMBase):
         RBMBase.__init__(self, vis_num, hid_num)
 
     def p_h_given_v(self, v):
-        return torch.sigmoid(torch.matmul(v, self.w.t()) + self.b)
+        index_tensor = torch.Tensor.long(torch.ones(self.vis_num, 0))
+        
+        w_t = (self.w.t().clone()).scatter_(0, index_tensor, (self.w.t().clone()))
+        print(type(self.w.t()))
+        
+        print(v.size(0))
+        v = (v.clone()).view(self.vis_num * self.hid_num)
+        print(type(v), v.size())
+
+        return torch.sigmoid(
+            torch.matmul(
+                v, 
+                w_t + self.b
+            )
+        )
 
     def sample_h_given_v(self, v):
         h_prob = self.p_h_given_v(v)
@@ -21,7 +35,12 @@ class RBMBer(RBMBase):
         return h_prob, (h_prob > r).float()
 
     def p_v_given_h(self, h):
-        return torch.sigmoid(torch.matmul(self.w.t(), h) + self.a)
+        index_tensor = torch.Tensor.long(torch.ones(self.hid_num, 0))
+        return torch.sigmoid(
+            torch.matmul(
+                self.w.t(), 
+                h.scatter_(0, index_tensor, h.clone())) + self.a
+        )
 
     def cd(self, v_data, k=1, eta=0.2, alpha=0.9, lam=0.0):
         return RBMBase.cd(self, v_data, k, eta, alpha, lam)
